--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,9 @@
 @import "./global/fonts.scss";
+@import "./global/variables.scss";
+@import "./global/global.scss";
+@import "./blocks/page.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/button.scss";
