--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -16,6 +16,14 @@ img {
   vertical-align: middle;
 }
 
+a {
+  transition: color 0.2s;
+}
+
+svg {
+  transition: fill 0.2s;
+}
+
 @mixin reset-list {
   margin: 0;
   padding: 0;
