--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -20,6 +20,6 @@
   --c-link-hover: var(--bg-light);
 
   // Footer
-  --c-social-link-hover: var(--bg-light);
+  --bg-footer: hsla(0 0% 98% / 1);
   --c-text-footer: hsla(201 34% 16% / 0.5);
 }
