--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,4 +7,5 @@
 @import "./blocks/header.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/contacts.scss";
+@import "./blocks/advantages.scss";
 @import "./blocks/footer.scss";
