--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -22,6 +22,7 @@
 
   //Advantages
   --c-item-border: hsla(0 0% 92% / 1);
+  --bg-item: hsla(0 0% 100% / 1);
 
   // Footer
   --bg-footer: hsla(0 0% 98% / 1);
