--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -22,6 +22,7 @@
   padding: 40px 41px 50px;
   border: 1px solid var(--c-item-border);
   border-left: 3px solid var(--bg-light);
+  background-color: var(--bg-item);
   color: var(--c-text-accent);
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 
@@ -34,6 +35,8 @@
   }
 
   @media (max-width: 767px) {
+    padding-bottom: 25px;
+
     &:not(:first-child) {
       padding-right: 11px;
     }
