--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,4 +8,5 @@
 @import "./blocks/logo.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/about.scss";
 @import "./blocks/footer.scss";
