--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,4 +9,5 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/about.scss";
+@import "./blocks/services.scss";
 @import "./blocks/footer.scss";
