feat: добавь блок обратной связи

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -17,6 +17,7 @@
 
   &:hover,
   &:focus {
-    box-shadow: 0 0 10px currentColor;
+    outline: none;
+    box-shadow: 0 0 10px 5px currentColor;
   }
 }
