--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -24,6 +24,9 @@
   --c-item-border: hsla(0 0% 92% / 1);
   --bg-item: hsla(0 0% 100% / 1);
 
+  // Feedback
+  --bg-input: hsla(0 0% 100% / 0.1);
+
   // Footer
   --bg-footer: hsla(0 0% 98% / 1);
   --c-text-footer: hsla(201 34% 16% / 0.5);
