--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,4 +10,6 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/about.scss";
 @import "./blocks/services.scss";
+@import "./blocks/feedback.scss";
+@import "./blocks/feedback-form.scss";
 @import "./blocks/footer.scss";
