--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -14,6 +14,15 @@
   font-size: 36px;
   font-weight: 400;
   line-height: 140.6%;
+
+  @media (max-width: 1023px) {
+    margin-bottom: 15px;
+    font-size: 32px;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 28px;
+  }
 }
 
 .feedback-form span {
@@ -27,6 +36,17 @@
   column-gap: 30px;
   row-gap: 40px;
   margin-top: 51px;
+
+  @media (max-width: 1023px) {
+    row-gap: 42px;
+    margin-top: 56px;
+  }
+
+  @media (max-width: 767px) {
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+    margin-top: 25px;
+  }
 }
 
 .feedback-form ::placeholder {
@@ -39,7 +59,7 @@
 .feedback-form input,
 .feedback-form textarea {
   margin: 0;
-  padding: 14px 16px;
+  padding: 15px 16px;
   font-family: inherit;
   font-size: inherit;
   line-height: 134.4%;
@@ -59,6 +79,15 @@
   grid-column: 1 / -1;
   height: 154px;
   resize: none;
+
+  @media (max-width: 1023px) {
+    height: 159px;
+  }
+
+  @media (max-width: 767px) {
+    width: 100%;
+    height: 104px;
+  }
 }
 
 .feedback-form__button {
@@ -72,6 +101,11 @@
   grid-template-columns: auto auto;
   column-gap: 15px;
   font-size: 14px;
+
+  @media (max-width: 767px) {
+    margin-top: 2px;
+    margin-left: 4px;
+  }
 
   &:hover,
   &:focus-within {
