--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,18 +1,43 @@
 .feedback {
   padding-top: 92px;
-  padding-bottom: 116px;
+  padding-bottom: 114px;
   background-image: url("../img/feedback/feedback-bg@1x.png"), url("../../img/feedback/feedback-figure-bg.svg");
   background-repeat: no-repeat;
   background-position: 24.86% 161px, right 0;
   background-color: var(--bg-light);
+
+  @media (max-width: 1023px) {
+    padding-top: 80px;
+    padding-bottom: 106px;
+    background-image: none;
+  }
+
+  @media (max-width: 767px) {
+    padding-top: 29px;
+    padding-bottom: 45px;
+  }
 }
 
 .feedback__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 30px;
+
+  @media (max-width: 1023px) {
+    grid-template-columns: 1fr;
+    max-width: 82.6%;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 767px) {
+    max-width: 100%;
+  }
 }
 
 .feedback__form {
   grid-column: 2;
+
+  @media (max-width: 1023px) {
+    grid-column: 1;
+  }
 }
