--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -5,6 +5,11 @@
 
   @media (max-width: 1023px) {
     padding-top: 50px;
+    padding-bottom: 79px;
+  }
+
+  @media (max-width: 767px) {
+    padding-bottom: 64px;
   }
 }
 
