feat: добавь верстку попапа

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -30,4 +30,7 @@
   // Footer
   --bg-footer: hsla(0 0% 98% / 1);
   --c-text-footer: hsla(201 34% 16% / 0.5);
+
+  // Popup
+  --bg-popup: hsla(0 0% 0% / 0.5);
 }
