--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,5 @@
 @import "./blocks/feedback.scss";
 @import "./blocks/feedback-form.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/popup.scss";
+@import "./blocks/feedback-popup.scss";
