--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -26,13 +26,26 @@
 }
 
 .about__decor {
-  background-image: url("../img/about/about-mask@1x.png");
+  .no-webp & {
+    background-image: image-set(url("../img/about/about-mask@2x.png") 2x, url("../img/about/about-mask@1x.png") 1x);
+  }
+
+  .webp & {
+    background-image: image-set(url("../img/about/about-mask@2x.webp") 2x, url("../img/about/about-mask@1x.webp") 1x);
+  }
+
   background-repeat: no-repeat;
   background-clip: text;
   background-position: -30px 0;
 
   @media (max-width: 1023px) {
-    background-image: url("../../img/about/about-mask-tablet@1x.png");
+    .no-webp & {
+      background-image: image-set(url("../img/about/about-mask-tablet@2x.png") 2x, url("../img/about/about-mask-tablet@1x.png") 1x);
+    }
+
+    .webp & {
+      background-image: image-set(url("../img/about/about-mask-tablet@2x.webp") 2x, url("../img/about/about-mask-tablet@1x.webp") 1x);
+    }
     background-position: -33px -2px;
   }
 
