--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -29,6 +29,7 @@
 
   // Footer
   --bg-footer: hsla(0 0% 98% / 1);
+  --c-header-footer: hsla(201 34% 16% / 1);
   --c-text-footer: hsla(201 34% 16% / 0.5);
 
   // Popup
