feat: добавь зацикливание таба в попапе

--- a/source/sass/blocks/feedback-popup.scss
+++ b/source/sass/blocks/feedback-popup.scss
@@ -121,7 +121,7 @@
 
   &:hover,
   &:focus-within {
-    .feedback-form__checkbox {
+    .feedback-popup__checkbox {
       box-shadow: 0 0 10px 5px currentColor;
     }
   }
