--- a/source/sass/blocks/feedback-popup.scss
+++ b/source/sass/blocks/feedback-popup.scss
@@ -140,10 +140,11 @@
   }
 }
 
-.feedback-popup__checkbox {
-  display: flex;
+.feedback-popup .feedback-popup__checkbox {
+  display: inline-flex;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
   width: 16px;
   height: 16px;
   border: 1px solid currentColor;
