--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -15,6 +15,14 @@
   background-position: 24.86% 161px, right 0;
   background-color: var(--bg-light);
 
+  @media (max-width: 1536px) {
+    background-position: 14% 161px, right 0;
+  }
+
+  @media (max-width: 1440px) {
+    background-position: 0% 161px, right 0;
+  }
+
   @media (max-width: 1023px) {
     padding-top: 80px;
     padding-bottom: 106px;
