--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -65,6 +65,7 @@
   line-height: 134.4%;
   color: inherit;
   border: 0;
+  border-radius: 0;
   background-color: var(--bg-input);
   transition: box-shadow 0.3s;
 
